--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,9 +36,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".QRScanActivity"
-            android:label="@string/app_name"/>
+        <activity android:name=".QRScanActivity"/>
+        <activity android:name=".RefreshSwipeMenuListActivity"/>
     </application>
 
 </manifest>
